PhotographyBusiness/PhotographyBusiness/wwwroot/css/site.css
html {
  font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

html {
  position: relative;
  min-height: 100%;
}

.btn-border-white {
    box-shadow: inset 0px 0px 0px 1px white;
    border: 1px solid white;
}

.btn-border-black {
    box-shadow: inset 0px 0px 0px 1px black;
    border: 1px solid black;
}

.btn-square {
    border-radius: 0
}

.pop-out{
    transition: all .2s ease-in-out;
}


.pop-out:hover {
    transform: scale(1.1);
}

/*Add by Shero*/
/*.login-dropdown {
    background-image: url("../media/img3.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    padding: 20px;
    opacity: 3;
}*/

@media only screen and (min-width: 576px) {
    .dropdown-menu-center {
        left: 50% !important;
        right: auto !important;
        text-align: center !important;
        transform: translate(-50%, 0) !important;
    }
}

.btn-even {
    width: 5em;
}


.input-group > :not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
    margin-left: 0 !important;
    border-top-left-radius: 0.25rem !important;
    border-bottom-left-radius: 0.25rem !important;
    border-top-right-radius: 0.25rem !important;
    border-bottom-right-radius: 0.25rem !important;
}

.row {
    --bs-gutter-x: 1.5rem !important;
    --bs-gutter-y: 0 !important;
    display: flex !important;
    flex-wrap: wrap !important;
    margin-top: calc(var(--bs-gutter-y) * -1) !important;
    margin-right: calc(var(--bs-gutter-x) * -.5) !important;
    margin-left: calc(var(--bs-gutter-x) * -.5) !important;
    justify-content: space-around !important;
}

